# fancy_surreal

./: Cargo.toml  README.md
src/: change.rs  client.rs  error.rs  lib.rs  record.rs  select.rs  traits.rs
src/tests/: basic.rs  change.rs  mod.rs  multi_owners.rs
