[package]
name = "fancy_surreal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.29"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.0.0"
tokio = { version = "1.35.0", features = ["full"] }
