[package]
name = "fancy_surreal"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = "1.5.3"
tokio = { version = "1.38.0", features = ["full"] }
