[package]
name = "fancy_surreal"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = "2.2.2"
tokio = { version = "1.44.2", features = ["full"] }
